<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    app:layout_constraintCircleRadius="20dp"
    android:background="@color/colorPrimary"
    android:layout_height="500dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:id="@+id/close"
    android:layout_marginBottom="30dp"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center"
        android:id="@+id/exit"
        android:src="@drawable/ic_highlight_off_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:textSize="28sp"
        />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textSize="24sp"
            android:id="@+id/userStatus"
            android:fontFamily="@font/bebas_regular"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/close"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/relly_company"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/bebas_regular"
            android:text="@string/user_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:layout_marginStart="140dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/raleway_medium"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/userName"
        android:layout_gravity="center"
        android:id="@+id/relly_firstName"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/bebas_regular"
            android:text="@string/first_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:layout_marginStart="140dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/raleway_medium"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/userName"
        android:layout_gravity="center"
        android:id="@+id/relly_lastName"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/bebas_regular"
            android:text="@string/last_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:gravity="center"
            android:layout_marginStart="140dp"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/raleway_medium"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/userName"
        android:layout_gravity="center"
        android:id="@+id/relly_email"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/bebas_regular"
            android:text="@string/email"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_marginStart="140dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/raleway_medium"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/userName"
        android:layout_gravity="center"
        android:id="@+id/relly_companyName"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/bebas_regular"
            android:text="@string/company_name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/companyName"
            android:gravity="center"
            android:layout_marginStart="140dp"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:fontFamily="@font/raleway_medium"
            />
    </RelativeLayout>

</LinearLayout>